--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,10 @@
 ---
+import "@fontsource-variable/onest";
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import { ViewTransitions } from "astro:transitions"
+
+
 interface Props {
 	title: string;
 }
@@ -15,9 +21,12 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body>
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -33,19 +42,11 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: "Onest Variable", system-ui, sans-serif;;
+		background: #ffffff;
 		background-size: 224px;
 	}
 	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+		font-family: "Onest Variable", system-ui, sans-serif;
 	}
 </style>
