--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,29 +1,110 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Lego Website">
-    <main class="mx-auto max-w-6xl my-3"></main>
+    <section class="mx-auto max-w-6xl my-2">
+        <h1 class="text-5xl my-9">Contactanos</h1>
 
-        <h1>pagina de contacto</h1>
+        <section class="flex [&>div]:w-full gap-8">
+            <div>
+                <form
+                    action="#"
+                    method="post"
+                    class="flex flex-col"
+                    id="contactForm"
+                >
+                    <label for="nombre">Nombre:</label>
+                    <input
+                        type="text"
+                        id="nombre"
+                        name="nombre"
+                        required
+                        placeholder="Jane doe"
+                    />
 
-        <section>
-            <h2>Formulario de Contacto</h2>
-            <form action="/enviar.php" method="post">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
-    
-                <label for="email">Correo Electrónico:</label>
-                <input type="email" id="email" name="email" required>
-    
-                <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
-    
-                <button type="submit">Enviar</button>
-            </form>
+                    <label for="email">Correo Electrónico:</label>
+                    <input
+                        type="email"
+                        id="email"
+                        name="email"
+                        required
+                        placeholder="janedoe@mail.com"
+                    />
+
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea
+                        id="mensaje"
+                        name="mensaje"
+                        rows="4"
+                        required
+                        placeholder="¿Como te podemos ayudar?"></textarea>
+
+                    <button
+                        type="submit"
+                        class="px-8 py-3 bg-red-500 border w-max rounded-lg text-white font-bold text-xl"
+                        id="showPopupBtn">Enviar</button
+                    >
+                </form>
+            </div>
+            <div>
+                <img
+                    src="https://readytrainingonline.com/wp-content/uploads/2015/04/Remember-LEAST-for-Great-Customer-Service-blog-sized.png"
+                    alt=""
+                />
+            </div>
         </section>
-        
-        <p>¡Esperamos recibir tus comentarios! Nos pondremos en contacto contigo lo antes posible.</p>
-
-        
+        <span
+            class="hidden fixed top-0 left-0 w-full h-full bg-black/60 z-50"
+            id="popup"
+        >
+            <p>
+                ¡Esperamos recibir tus comentarios! Nos pondremos en contacto
+                contigo lo antes posible.
+            </p>
+            <button
+                class="px-8 py-3 bg-red-500 border w-max rounded-lg text-white font-bold text-xl"
+                id="closePopupBtn"
+                >Cerrar
+            </button>
+        </span>
+    </section>
 </Layout>
+
+<style>
+    input,
+    textarea {
+        margin-bottom: 1rem;
+        border: 1px solid #000;
+        border-radius: 5px;
+        padding: 0.5rem;
+    }
+</style>
+
+<script>
+    const showPopupBtn = document.getElementById("showPopupBtn");
+    const popup = document.getElementById("popup");
+    const closePopupBtn = document.getElementById("closePopupBtn");
+
+    showPopupBtn!.addEventListener("click", function () {
+        if (validateForm()) {
+            popup!.style.display = "block";
+        }
+    });
+
+    function validateForm() {
+        console.log("validating form");
+
+        const contactForm = document.getElementById("contactForm");
+        const requiredFields = contactForm ? contactForm.querySelectorAll("[required]"): [];
+        let isValid = true;
+
+        requiredFields.forEach(function (field) {
+            const inputField = field as HTMLInputElement;
+            if (inputField.value === "") {
+                isValid = false;
+            }
+        });
+        return isValid;
+    }
+</script>
